--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -24,16 +24,22 @@
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 10px 25px;
+	padding: 17px 27px;
 	// min-width: 144px;
 	// min-height: 36px;
-	font-size: 12px;
-	font-weight: 400;
-	color: #000;
-	background: #FFE417;
-	border-radius: 5px;
+	font-size: 14px;
+	font-weight: 700;
+	color: #fff;
+	background: linear-gradient(180deg, #FEAC88 0%, #F4510B 100%);
+	border-radius: 3px;
 	&:hover{}
 	&.fw{width: 100%;}  
+}
+
+.btn_transp {
+	border: 1px solid #F4510B;
+	background: transparent;
+	border-radius: 3px;
 }
 
 .button {
@@ -190,9 +196,12 @@ textarea {
 	display: flex;
 	width: 100%;
 	height: 30px;
-	padding: 0px 15px;
-	border-radius: 5px;
-	border: 1px solid #000;
+	font-size: 16px;
+	padding: 0px 18px;
+	color: #727272;
+	background: #FFFFFF;
+	border: 2px solid #E6E6E6;
+	border-radius: 3px;
 	&._focus {
 		background: grey;
 	}
@@ -216,10 +225,10 @@ textarea.input {
 // }
 
 // Стилизация placeholder 
-::-webkit-input-placeholder {color: #8584847a;}
-::-moz-placeholder          {color: #8584847a;}/* Firefox 19+ */
-:-moz-placeholder           {color: #8584847a;}/* Firefox 18- */
-:-ms-input-placeholder      {color: #8584847a;}
+::-webkit-input-placeholder {color: #727272;}
+::-moz-placeholder          {color: #727272;}/* Firefox 19+ */
+:-moz-placeholder           {color: #727272;}/* Firefox 18- */
+:-ms-input-placeholder      {color: #727272;}
 //</INPUT>====================================================================================================
 
 //<CHECK (chk+tab)>====================================================================================================
