--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,6 +1,7 @@
 .footer {
-  padding: 30px 0;
-  background: #86A298;
+  padding: 26.5px 0;
+  color: #fff;
+  background: #0D1D54;
   // .footer__container
   &__container {
     display: flex;
@@ -10,47 +11,26 @@
   &__row {
     width: 100%;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
-  }
-  // .footer__logo
-  &__logo {}
-  // .footer__menu
-  &__menu {}
-  // .footer__item 
-  &__menu-item {
-    margin-bottom: 10px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-  }
-  // .footer__link
-  &__menu-item-link {}
-  // .footer__contact
-  &__contact {}
-  // .footer__form
-  &__form {
-    flex: 0 1 393px;
-  }
-  // .footer__form-title
-  &__form-title {
-    margin-bottom: 28px;
-  }
-  // .footer__form-input
-  &__form-input {
-    margin-bottom: 22px;
-  }
-  // .footer__form-btn
-  &__form-btn {
-      width: 225px;
-      height: 37px;
-      font-size: 18.5px;
-      background: #FCA01F;
   }
 }
 
+.footer__menu a {
+  color: #fff;
+}
+.footer__phone {
+  color: #fff;
+  margin-right: 45px;
+}
+.footer__mail {
+  color: #fff;
+}
 
+.footer__social-icon {
+  background: #fff;
+}
 
-
-
-
-
+.footer__contacts {
+  align-items: center;
+}
