Баннер на главной

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -168,6 +168,17 @@ h4 {
 }
 //===================================================================================================================================
 
+.banner {
+	position: relative;
+	padding: 60px 0 104px 0;
+	height: 700px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-image: url('../img/banner.jpg');
+}
+//========================================================================================================================================================
+
 .about {
 	padding: 122px 0 90px 0;
 }
