--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -32,10 +32,11 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  background-color: #00000035;
-	&:hover {
- 	 background-color: #00000050;
-	}
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0) 100%);
+	transform: matrix(1, 0, 0, -1, 0, 0);
+	// &:hover {
+ 	//  background-color: #00000050;
+	// }
 }
 //====================================================================================================
 // Наложение труегольного блока
