--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -177,6 +177,73 @@ h4 {
 	background-position: center;
 	background-image: url('../img/banner.jpg');
 }
+
+.banner ._container {
+	display: flex;
+  align-items: flex-end;
+  height: 100%;
+}
+
+.banner__flex {
+	position: relative;
+	z-index: 500;
+	width: 100%;
+	justify-content: space-between;
+	align-items: start;
+}
+.banner__flex-descp {
+}
+.banner__title {
+	color: #fff;
+	margin-bottom: 36px;
+}
+.banner__flex-descp-btn a {
+	margin-right: 30px;
+}
+.banner__flex-descp-btn a:last-child {
+	margin-right: 0;
+}
+.banner__flex-date {
+	position: relative;
+	color: #000;
+	text-align: center;
+	padding: 21px 47px;
+	background: #FFFFFF;
+	box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.07);
+	border-radius: 5px;
+	&:before {
+		content: '';
+		position: absolute;
+		top: -8px;
+    left: 5%;
+    z-index: -1;
+		width: 225px;
+		height: 95px;
+		background: #F4510C;
+		box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.07);
+		border-radius: 5px;
+	}
+}
+.banner__flex-date-line {
+	height: 1px;
+	background: #E6E6E6;
+	margin: 10px 0 15px 0;
+}
+.banner__flex-date-number {
+	font-size: 70px;
+	font-weight: 700;
+	line-height: 85px;
+}
+.banner__flex-date-month {
+	font-size: 30px;
+	line-height: 37px;
+	font-weight: 700;
+}
+.banner__flex-date-year {
+	font-size: 30px;
+	line-height: 37px;
+	font-weight: 700;
+}
 //========================================================================================================================================================
 
 .about {
