Добавил линию на главной

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -264,6 +264,15 @@ h4 {
 }
 //========================================================================================================================================================
 
+.line {
+
+}
+.line-bg {
+	height: 1px;
+	background: #E6E6E6;;
+}
+//========================================================================================================================================================
+
 .competitions {
 	padding: 90px 0 100px 0;
 }
