Структура стр Соревнование

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -148,7 +148,7 @@ h4 {
 //@import "popover.min";
 //@import "baguetteBox";
 // @import "fancybox.min";
-//@import "pagging";
+@import "pagging";
 // @import "map";
 // @import "slider";
 // @import "collection";
