--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -2,12 +2,12 @@
 
 // Общий класс главной обертки
 .page-recurring {
-  padding-bottom: 150px;}
+  padding-top: 30px;}
 
 // Общий класс для страниц
-.recurring {
-  padding-top: 27px;}
-.recurring h1,
-.recurring h2 {
-  margin-bottom: 28px;}
+// .recurring {
+//   padding-top: 27px;}
+// .recurring h1,
+// .recurring h2 {
+//   margin-bottom: 28px;}
 //=============================================================================================================================
