--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -2,7 +2,7 @@
 
 // Общий класс главной обертки
 .page-recurring {
-  padding-top: 30px;}
+  padding: 30px 0 100px 0;}
 
 // Общий класс для страниц
 // .recurring {
