--- a/#src/scss/media.scss
+++ b/#src/scss/media.scss
@@ -5,17 +5,37 @@
 	}
 }
 
+@media (max-width: 1150px) {
+	.competitions__card-descp-flex-btn {
+		padding: 15px 15px;}
+}
+
+@media (max-width: 1050px) {
+	.competitions__row {
+		margin: 0 -10px;}
+	.competitions__column {
+		padding: 0 10px;}
+	.competitions__card-descp-flex-btn {
+		padding: 15px 10px;}
+	.competitions__card-descp {
+		padding: 23px 10px 21px 10px;}
+}
+
 @media (max-width: 1024px) { 
 	.menu-list a {
 		padding: 5px 25px 5px 0;}
 	.header__social {
 		margin-right: 10px;}
+	.banner {
+		height: 500px;}
 }
 
 @media (max-width: 860px) { 
 	.logo-icon {
     flex: 0 0 150px;
     height: 115px;}
+	.competitions__column {
+		flex: 0 1 100%;}
 }
 
 @media (max-width: 812px) { 
@@ -45,8 +65,6 @@
 		display: none;}
 	.icon-menu {
 		display: flex;}
-	.header__menu-block {
-		margin-right: 15px;}
 	.header__menu-list {
 		display: none;}
 	.header__search form {
@@ -84,6 +102,30 @@
 		margin-bottom: 10px;}
 	.footer__contacts {
 		margin-bottom: 10px;}
+	.banner {
+		height: 400px;}
+	.banner__flex-date {
+		padding: 15px 35px;}
+	.banner__flex-date-number {
+		font-size: 50px;
+		line-height: 55px;}
+	.banner__flex-date-month {
+		font-size: 20px;
+		line-height: 23px;}
+	.banner__flex-date-line {
+		margin: 5px 0 5px 0;}
+	.banner ._container {
+		align-items: center;}
+	.banner__flex-date:before {
+		top: -3px;
+		left: 2%;
+		width: 175px;}
+	.about__title {
+		margin-bottom: 10px;}
+	.about__descp p {
+		font-size: 14px;
+		line-height: 1.3;
+		margin-bottom: 15px;}
 }
 
 @media (max-width: 700px) {
@@ -93,6 +135,12 @@
 		-webkit-transition: right 0.8s;
 		-o-transition: right 0.8s;
 		transition: right 0.8s; }
+	.banner__flex-date {
+		flex: 0 0 200px;}
+	.banner__flex-descp-btn {
+		flex-wrap: wrap;}
+	.banner__flex-descp-btn a {
+		margin-bottom: 10px;}
 }
 
 @media (max-width: 612px) {
@@ -118,6 +166,15 @@
 		display: none;}
 	.popup__form-block {
 		flex: 0 1 100%;}
+	.banner__flex {
+		flex-wrap: wrap;}
+	.banner__title {
+		margin-bottom: 15px;}
+	.banner {
+		height: auto;
+		padding: 80px 0 45px 0 !important;}
+	.banner__flex-descp {
+		margin-bottom: 15px;}
 }
 
 @media (max-width: 480px) {
@@ -135,6 +192,29 @@
     margin: 0;}
 	.search__input {
     border-radius: 0 !important;}
+	.competitions__card-descp-flex {
+		flex-wrap: wrap;}
+	.competitions__card-descp-flex-btn {
+		margin-top: 10px;}
+}
+
+@media (max-width: 414px) {
+	.banner__flex-descp-btn a {
+		width: 100%;
+		margin-right: 0;}
+	.banner__flex-date {
+		padding: 35px;
+		flex: 0 1 100%;}
+	.banner__flex-date-number {
+		font-size: 65px;
+		line-height: 65px;}
+	.banner__flex-date-month {
+		font-size: 28px;
+		line-height: 25px;}
+	.banner__flex-date-line {
+		margin: 10px 0;}
+	.competitions__card-descp-flex-btn {
+		width: 100%;}
 }
 
 @media (max-width: 375px) {
